[gd_scene load_steps=3 format=3 uid="uid://c47ftbuj23tx5"]

[ext_resource type="Script" path="res://Scenes/wordrow.gd" id="1_cb3ap"]

[sub_resource type="LabelSettings" id="LabelSettings_oqyss"]
font_size = 36
outline_color = Color(0, 0, 0, 1)

[node name="Wordrow" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cb3ap")

[node name="Box0" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
scale = Vector2(0.961241, 0.961241)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Box0"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_oqyss")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Box0"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 51.0

[node name="Box1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 56.0
offset_right = 106.0
offset_bottom = 50.0
scale = Vector2(0.961241, 0.961241)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Box1"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_oqyss")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Box1"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 51.0

[node name="Box2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 112.0
offset_right = 162.0
offset_bottom = 50.0
scale = Vector2(0.961241, 0.961241)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Box2"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_oqyss")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Box2"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 51.0

[node name="Box3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 168.0
offset_right = 218.0
offset_bottom = 50.0
scale = Vector2(0.961241, 0.961241)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Box3"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_oqyss")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Box3"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 51.0

[node name="Box4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 224.0
offset_right = 274.0
offset_bottom = 50.0
scale = Vector2(0.961241, 0.961241)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Box4"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_oqyss")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Box4"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 51.0
